# chromey

./: INSTALL.md  LICENSE  PUBLISHING.md  README.md  config.example.yaml  config.yaml  environment.yml  main.py  pyproject.toml
extension/chromey-extension/: manifest.json  service_worker.js  settings.css  settings.html  settings.js  shared.js  sidepanel.css  sidepanel.html  sidepanel.js
src/chromey/: browser_use_instrumentation.py  browser_use_runtime.py  chrome.py  config.py  lmstudio.py  prompting.py  server.py  session.py
tools/: process_logo.py
